[gd_scene load_steps=12 format=3 uid="uid://brl8ojyq287fy"]

[ext_resource type="Texture2D" uid="uid://ykk8a7jvrixd" path="res://assests/portal/Dimensional_Portal.png" id="1_0r486"]
[ext_resource type="Script" uid="uid://doiqc6l58tlet" path="res://portal.gd" id="1_ef3v5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ef3v5"]
atlas = ExtResource("1_0r486")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_grrij"]
atlas = ExtResource("1_0r486")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r214"]
atlas = ExtResource("1_0r486")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pgh4"]
atlas = ExtResource("1_0r486")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtc1a"]
atlas = ExtResource("1_0r486")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8rct"]
atlas = ExtResource("1_0r486")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0r486"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef3v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grrij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r214")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pgh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtc1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8rct")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ef3v5"]
size = Vector2(6.5, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grrij"]
size = Vector2(7, 28)

[node name="Portal" type="Area2D"]
script = ExtResource("1_ef3v5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0r486")

[node name="CollisionShapeRight" type="CollisionShape2D" parent="."]
position = Vector2(4.75, 0)
shape = SubResource("RectangleShape2D_ef3v5")

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_grrij")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
